--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "boxen": "^4.1.0",
     "chalk": "^2.4.2",
     "dotenv": "^8.2.0",
+    "edit-json-file": "^1.3.1",
     "figlet": "^1.2.4",
     "open-file-explorer": "^1.0.2",
     "prompts": "^2.2.1",
+    "uuid": "^3.3.3",
     "yargs": "^14.2.0"
   }
 }
