--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^8.2.0",
     "edit-json-file": "^1.3.1",
     "figlet": "^1.2.4",
+    "js-yaml": "^3.13.1",
     "open-file-explorer": "^1.0.2",
     "prompts": "^2.2.1",
     "uuid": "^3.3.3",
