--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Grafana Panel and Dashboard Editing Tool",
   "main": "bin/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\""
   },
   "author": "Mike Bone",
   "license": "ISC",
