--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "js-yaml": "^3.13.1",
     "open-file-explorer": "^1.0.2",
     "prompts": "^2.2.1",
+    "update-notifier": "^3.0.1",
     "uuid": "^3.3.3",
     "yargs": "^14.2.0"
   }
